fixed contact section spacing

--- a/css/style.css
+++ b/css/style.css
@@ -423,8 +423,8 @@ header{
     background: var(--third-color);
 }
 .contact-con{
-    min-height: 515px;
-    padding: 120px 0;
+    min-height: 460px;
+    padding: 120px 0 20px;
     display: flex;
     justify-content: space-between;
 }
